# aoc-cli

./: CONTRIBUTING.md  Cargo.toml  Cross.toml  LICENSE  README.md
.github/workflows/: build-and-test.yml  clippy-and-fmt.yml  release.yml  rust-clippy.yml  winpkg.yml  wix.yml
aoc-client/: Cargo.toml  README.md
aoc-client/src/: lib.rs
src/: aoc.rs  args.rs  main.rs
wix/: License.rtf  main.wxs
