[package]
name = "aoc-cli"
description = "Advent of Code command-line tool"
version = "0.7.0"
authors = ["Sergio de Carvalho <scarvalhojr@gmail.com>"]
categories = ["command-line-utilities"]
edition = "2021"
repository = "https://github.com/scarvalhojr/aoc-cli"
documentation = "https://docs.rs/crate/aoc-cli/latest"
readme = "README.md"
license = "MIT"

[[bin]]
name = "aoc"
path = "src/main.rs"

[dependencies]
chrono = { version = "0.4", default-features = false, features = ["clock", "std", "wasmbind"] }
clap = { version = "4", features = ["color", "derive"]}
html2text = "0.4"
regex = "1.7"
reqwest = { version = "0.11", features = ["blocking"] }
term_size = "0.3"
html2md = "0.2"
dirs = "4.0"

# Use static linking of OpenSSL on Linux with MUSL
[target.x86_64-unknown-linux-musl.dependencies]
openssl = { version = "0.10", features = ["vendored"] }
