[package]
name = "aoc-cli"
description = "Advent of Code command-line tool"
version = "0.10.2"
authors = ["Sergio de Carvalho <scarvalhojr@gmail.com>"]
categories = ["command-line-utilities"]
edition = "2021"
repository = "https://github.com/scarvalhojr/aoc-cli"
documentation = "https://docs.rs/crate/aoc-cli/latest"
readme = "README.md"
license = "MIT"

[[bin]]
name = "aoc"
path = "src/main.rs"

[dependencies]
chrono = { version = "0.4", default-features = false, features = ["clock", "std", "wasmbind"] }
colored = "2.0.0"
clap = { version = "4", features = ["cargo", "color", "derive"]}
dirs = "4.0"
exit-code = "1.0"
env_logger = "0.10"
html2md = "0.2"
html2text = "0.4"
http = "0.2"
log = "0.4"
regex = "1.7"
reqwest = { version = "0.11", features = ["blocking", "json"] }
serde = { version = "1.0", features=["derive"] }
term_size = "0.3"
thiserror = "1.0"

# Use static linking of OpenSSL on Linux with MUSL
[target.x86_64-unknown-linux-musl.dependencies]
openssl = { version = "0.10", features = ["vendored"] }
