[package]
name = "aoc-cli"
description = "Advent of Code command-line tool"
version = "0.12.0"
authors = ["Sergio de Carvalho <scarvalhojr@gmail.com>"]
categories = ["command-line-utilities"]
edition = "2021"
repository = "https://github.com/scarvalhojr/aoc-cli"
documentation = "https://docs.rs/crate/aoc-cli/latest"
readme = "README.md"
license = "MIT"

[[bin]]
name = "aoc"
path = "src/main.rs"

[dependencies]
aoc-client = { version = "0.1", path = "aoc-client" }
clap = { version = "4", features = ["cargo", "color", "derive"]}
exit-code = "1.0"
env_logger = "0.10"
log = "0.4"

# Use static linking of OpenSSL on Linux with MUSL
[target.x86_64-unknown-linux-musl.dependencies]
openssl = { version = "0.10", features = ["vendored"] }
