[package]
name = "aoc-client"
description = "Advent of Code client library"
version = "0.2.0"
authors = ["Sergio de Carvalho <scarvalhojr@gmail.com>"]
edition = "2021"
repository = "https://github.com/scarvalhojr/aoc-cli"
documentation = "https://docs.rs/crate/aoc-client/latest"
readme = "README.md"
license = "MIT"

[dependencies]
chrono = { version = "0.4", default-features = false, features = ["clock", "std", "wasmbind"] }
colored = "2.0.0"
dirs = "4.0"
html2md = "0.2"
html2text = { version = "0.7.0", features = ["css"] }
http = "0.2"
log = "0.4"
regex = "1.7"
reqwest = { version = "0.11", features = ["blocking", "json"] }
serde = { version = "1.0", features=["derive"] }
term_size = "0.3"
thiserror = "1.0"
